fixed z-index for pagination selector

--- a/scss/_teaser-big.scss
+++ b/scss/_teaser-big.scss
@@ -45,6 +45,7 @@
         width: auto !important;
         left: auto !important;
         margin-bottom: vert-heights(sm);
+        z-index: 0;
         
       }
       .swiper-pagination-bullet {
