--- a/scss/index.css
+++ b/scss/index.css
@@ -1492,6 +1492,7 @@ a {
     width: auto !important;
     left: auto !important;
     margin-bottom: 90px;
+    z-index: 0;
   }
   .teaser-big .slider .swiper-pagination-bullet {
     margin: 5px;
